# themis

./: CMakeLists.txt  vcpkg.json
src/soter/: soter_ec_key.h  soter_rsa_key.h  soter_t.h
src/wrappers/themis/themispp/impl/: input_buffer.hpp
tests/themis/: themis_seccure_message.c
tests/themispp/: secure_message_test.hpp
